--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
         <div>
           <h3>Get Started Today</h3>
           <p>Fill out this form and one of our trainers will schedule a consult</p>
-        
-          <!-- Add form element -->
           <form>
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your Name" name="name" id="name" />
@@ -53,6 +51,15 @@
               <input type="radio" name="trainer-confirm" id="trainer-no" />
               <label for="trainer-no">No</label>
             </p>
+            <p>
+              <label for="checkbox" >
+                I acknowledge that I am at least 18 years of age.
+              </label>
+              <input type="checkbox" name="age-confirm" id="checkbox" />
+            </p>
+            <button type="submit">
+              Get running!
+            </button>
           </form>
         </div>
       </section>
