changes to html

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
       </section>
       <!-- end header -->
       <!-- "what we do" section -->
-      <section id="what-we-do" class="intro">What we do</section>
+      <section id="what-we-do" class="intro"><h2>What We Do</h2></section>
       <!-- "what we do" -->
       
       <!-- "what you do" section -->
-      <section id="what-you-do" class="steps">...</section>
+      <section id="what-you-do" class="steps"><h2>What You Do</h2></section>
       
       <!-- "meet the trainers" section -->
-      <section id="meet-the-trainers" class="trainers">...</section>
+      <section id="your-trainers" class="trainers"><h2>Meet The Trainers</h2></section>
   
       <!-- "reach out" section -->
-      <section id="reach-out" class="contact">...</section>
+      <section id="reach-out" class="contact"><h2>Reach Out</h2></section>
       <!-- footer -->
       <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
